--- a/style.css
+++ b/style.css
@@ -11,3 +11,30 @@
  
 /* =Theme customization starts here
 -------------------------------------------------------------- */
+/* Rokkitt Regular (400) */
+@font-face {
+    font-family: 'Rokkitt';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('fonts/rokkitt-v36-latin-regular.woff2') format('woff2');
+  }
+  
+  /* Lato Regular (400) */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('fonts/lato-v24-latin-regular.woff2') format('woff2');
+  }
+  
+  /* Lato Bold (700) */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url('fonts/lato-v24-latin-700.woff2') format('woff2');
+  }
+  
