--- a/style.css
+++ b/style.css
@@ -579,3 +579,24 @@ body .wp-block-group .wp-block-cover {
   max-height: 4em;
   overflow: hidden;
 }
+
+.referenced-works h3 {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 2em;
+}
+
+.referenced-works h4 {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+.referenced-works ul {
+  margin-left: 1em;
+  padding-left: 1em;
+}
+
+.referenced-works li {
+  margin-bottom: 0.5em;
+}
