Added Bubble tag cloud style for themes and topics, nightmare css mess, broken in chrome and waterfox, ended up being cloudflare cache, various files modified

--- a/style.css
+++ b/style.css
@@ -624,36 +624,6 @@ body .wp-block-group .wp-block-cover {
   overflow: hidden;
 }
 
-.referenced-works h3 {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-top: 2em;
-}
-
-.referenced-works h4 {
-  font-size: 1.2em;
-  font-weight: bold;
-  margin-bottom: 0.5em;
-}
-
-.referenced-works ul {
-  margin-left: 1em;
-  padding-left: 1em;
-}
-
-.referenced-works li {
-  margin-bottom: 0.5em;
-}
-
-.referenced-works img.book-cover,
-.referenced-works img.movie-cover {
-  width: 60px;
-  height: 90px;
-  object-fit: cover;
-  margin-right: 10px;
-  flex-shrink: 0;
-}
-
 /* This is to fix the shortcode injected links on cover blocks */
 
 .has-white-color.has-link-color a {
@@ -723,4 +693,61 @@ body .wp-block-group .wp-block-cover {
   color: #555;
   margin-top: -0.5rem;
   margin-bottom: 1.5rem;
+}
+
+.referenced-works h3 {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 2em;
+}
+
+.referenced-works h4 {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+.referenced-works ul {
+  margin-left: 1em;
+  padding-left: 1em;
+}
+
+.referenced-works li {
+  margin-bottom: 0.5em;
+}
+
+.referenced-works img.book-cover,
+.referenced-works img.movie-cover {
+  width: 60px;
+  height: 90px;
+  object-fit: cover;
+  margin-right: 10px;
+  flex-shrink: 0;
+}
+
+.tag-bubbles {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px; /* space between bubbles */
+  margin-top: 0.5em;
+}
+
+.tag-bubble {
+  display: inline-flex; /* more reliable than inline-block in Safari */
+  align-items: center;
+  justify-content: center;
+  padding: 4px 10px;
+  border: 1px solid #000;
+  border-radius: 20px;
+  background: #fff;
+  color: #000;
+  text-decoration: none;
+  font-size: 0.9em;
+  line-height: 1.4;
+  transition: background 0.2s ease, color 0.2s ease;
+}
+
+.tag-bubble:hover {
+  background: #000;
+  color: #fff;
 }
